--- a/rbac/role-secrets.yml
+++ b/rbac/role-secrets.yml
@@ -4,6 +4,6 @@ metadata:
   namespace: wazuh
   name: role-secrets
 rules:
-- apiGroups: [""]
+- apiGroups: [""] # "" indicates the core API group
   resources: ["secrets"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  verbs: ["get", "list", "watch"]
