--- a/rbac/role-configmaps.yml
+++ b/rbac/role-configmaps.yml
@@ -4,6 +4,6 @@ metadata:
   namespace: wazuh
   name: role-configmaps
 rules:
-- apiGroups: [""]
+- apiGroups: [""] # "" indicates the core API group
   resources: ["configmaps"]
-  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  verbs: ["get", "list", "watch"]
